--- a/ApiSimulation/packages.config
+++ b/ApiSimulation/packages.config
@@ -15,6 +15,7 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
+  <package id="Microsoft.WebSockets" version="0.2.3.1" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
   <package id="PushSharp" version="4.0.10" targetFramework="net452" />
   <package id="RazorEngine" version="3.8.1" targetFramework="net452" />
